# index

./: README.md
docs/pure-grpc-rs/: changelog-2026-Q1.md
pidx/: Cargo.toml  pidx.toml.example
pidx/docs/: architecture.md  codelabs.md  design.md  readme.md  tasks.md
pidx/src/: classify.rs  config.rs  health.rs  main.rs
pidx/src/commands/: activity_command.rs  docs_command.rs  index_command.rs  mod.rs  report_command.rs  status_command.rs  sync_command.rs
pidx/src/db/: commit_store.rs  issue_store.rs  llm_summary_store.rs  mod.rs  release_store.rs  repo_store.rs  schema.rs  sync_log_store.rs
pidx/src/display/: markdown_renderer.rs  mod.rs  table_renderer.rs
pidx/src/github/: commit_fetcher.rs  issue_fetcher.rs  mod.rs  release_fetcher.rs  repo_fetcher.rs  types.rs
